[package]
name = "range-search"
version = "0.1.0"
edition = "2018"
authors = ["Julian Scheid <julians37@gmail.com>"]
rust-version = "1.51"
license = "MIT OR Apache-2.0"
description = "Layered Range Tree implementation, currently 2D-only."
homepage = "https://github.com/jscheid/range-search-rs"
repository = "https://github.com/jscheid/range-search-rs"
keywords = ["range", "tree", "2d", "no_std"]
categories = ["data-structures", "no-std"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bumpalo = { version = "3.8", features = ["boxed", "collections"] }

[dev-dependencies]
average = "0.13"
bincode = "1.3"
bytesize = "1.1"
criterion = "0.3"
humantime = "2.1"
num-format = "0.4"
num-traits = "0.2"
ordered-float = "2.0"
plotters = "0.3"
rand = "0.8"
rand_pcg = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
